--- a/Authentication-final/css/style.css
+++ b/Authentication-final/css/style.css
@@ -1,71 +1,44 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 body{
- font-family: times new roman;
+ font-family: Candara;
   font-size: 13px;
-  background-color: white;  
+  background-color:white;
+  width:1000px
 }
 #wrapper{
-  width: 1020px;
- border: solid 5px #999999;
-  margin: 0px auto 0px 200px;
+  width: 1000px;
+ border: solid 0px #999999;
+ 
+  margin: 0px auto 0px 240px;
   background-color:#d9f2e6;
 }
 header{
 	
-  
+    background-color:white;
+border: solid 2px #999999;
    
    
 }
 #fprint{
 	 margin-left: -8px;
 }
-#sidenav {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
 
-#sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-}
-
-#sidenav a:hover {
-  color: #f1f1f1;
-}
-
-#main {
-  margin-left: 160px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
-
-@media screen and (max-height: 450px) {
-  #sidenav {padding-top: 15px;}
-  #sidenav a {font-size: 18px;}
-}
 h1{
  
-  margin-right: 100px;
+  margin-right: 120px;
   text-align: center;
    font-size: 40px;
    }
  #picl  {
   image-align: left;
   margin-left: 20px;
+  margin-top: 15px;
+  
  }
  #picr  {
   image-align: right;
-  margin-top: -100px;
+  margin-top: -110px;
+  margin-right: -15px;
  }
  #intro  {
   margin-left: 260px;
@@ -115,6 +88,7 @@ height:50px;
 }
 #devices{
 	margin-left: 10px;
+	margin-right: 0px;
 }
 
  
