--- a/Authentication-final/css/style.css
+++ b/Authentication-final/css/style.css
@@ -3,14 +3,14 @@ body{
  font-family: Candara;
   font-size: 13px;
   background-color:white;
-  width:1000px
+  width:99%;
 }
 #wrapper{
-  width: 1000px;
+  width: 76%;
  border: solid 0px #999999;
- 
   margin: 0px auto 0px 240px;
   background-color:#d9f2e6;
+	margin-left: 20%;
 }
 header{
 	
